--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -98,12 +98,97 @@
 
 /* Custom styles */
 
+$screen-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+);
+
+@each $size, $size-value in $screen-breakpoints {
+  .hide-#{$size} {
+    @media (min-width: $size-value) {
+      display: none;
+    }
+  }
+}
+
 .shadow-none {
   box-shadow: none !important;
 }
 
 .m-0 {
   margin: 0;
+}
+
+.mb-1 {
+  margin-bottom: 4px !important;
+}
+
+.mb-2 {
+  margin-bottom: 8px !important;
+}
+
+.mb-3 {
+  margin-bottom: 12px !important;
+}
+
+.mb-4 {
+  margin-bottom: 16px !important;
+}
+
+.mb-5 {
+  margin-bottom: 20px !important;
+}
+
+.ml-1 {
+  margin-left: 4px !important;
+}
+
+.ml-2 {
+  margin-left: 8px !important;
+}
+
+.ml-3 {
+  margin-left: 12px !important;
+}
+
+.ml-4 {
+  margin-left: 16px !important;
+}
+
+.ml-5 {
+  margin-left: 20px !important;
+}
+
+.mr-1 {
+  margin-right: 4px !important;
+}
+
+.mr-2 {
+  margin-right: 8px !important;
+}
+
+.mr-3 {
+  margin-right: 12px !important;
+}
+
+.mr-4 {
+  margin-right: 16px !important;
+}
+
+.mr-5 {
+  margin-right: 20px !important;
+}
+
+.px-0 {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.pt-0 {
+  padding-top: 0px !important;
 }
 
 .text {
@@ -144,4 +229,10 @@ ion-input {
 ion-button {
   --border-radius: 16px;
   text-transform: none;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.ion-label-with-ion-icon {
+  display: inline-flex !important;
 }
