--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,25 +76,25 @@ http://ionicframework.com/docs/theming/ */
 
 /* This sets a different background and item background for the default theme on ios */
 :root.ios {
-  --ion-background-color: var(--ion-background-color-step-50, #f2f2f6);
+  --ion-background-color: var(--ion-background-color-step-50, #ffffff);
   --ion-toolbar-background: var(--ion-background-color);
   --ion-item-background: #fff;
 }
 
 /* This sets a different background and item background for the default theme on md */
 :root.md {
-  --ion-background-color: var(--ion-background-color-step-100, #f9f9f9);
+  --ion-background-color: var(--ion-background-color-step-100, #ffffff);
   --ion-toolbar-background: var(--ion-background-color);
   --ion-item-background: #fff;
 }
 
 /* This sets a different item background when dark mode is enabled on ios and md */
-@media (prefers-color-scheme: dark) {
-  :root.ios,
-  :root.md {
-    --ion-item-background: #1c1c1d;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   :root.ios,
+//   :root.md {
+//     --ion-item-background: #1c1c1d;
+//   }
+// }
 
 /* This sets a different item background when light mode is enabled on ios and md */
 @media (prefers-color-scheme: light) {
