[Feat]: Products page & major UI tweaks with pinia, products and card store

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -17,12 +17,12 @@ http://ionicframework.com/docs/theming/ */
 	--ion-color-primary-shade: #bd161d;
 	--ion-color-primary-tint: #db3037;
 
-	--ion-color-secondary: #B7171E;
-	--ion-color-secondary-rgb: 183,23,30;
-	--ion-color-secondary-contrast: #ffffff;
-	--ion-color-secondary-contrast-rgb: 255,255,255;
-	--ion-color-secondary-shade: #a1141a;
-	--ion-color-secondary-tint: #be2e35;
+	--ion-color-secondary: #DEE2E6;
+	--ion-color-secondary-rgb: 222,226,230;
+	--ion-color-secondary-contrast: #6C757D;
+	--ion-color-secondary-contrast-rgb: 0,0,0;
+	--ion-color-secondary-shade: #c3c7ca;
+	--ion-color-secondary-tint: #e1e5e9;
 
 	--ion-color-tertiary: #FFC02E;
 	--ion-color-tertiary-rgb: 255,192,46;
