--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -314,7 +314,51 @@ $screen-breakpoints: (
 }
 
 .m-0 {
-  margin: 0 !important;
+  margin: 0px !important;
+}
+
+.m-1 {
+  margin: 4px !important;
+}
+
+.m-2 {
+  margin: 8px !important;
+}
+
+.m-3 {
+  margin: 12px !important;
+}
+
+.m-4 {
+  margin: 16px !important;
+}
+
+.m-5 {
+  margin: 20px !important;
+}
+
+.p-0 {
+  padding: 0px !important;
+}
+
+.p-1 {
+  padding: 4px !important;
+}
+
+.p-2 {
+  padding: 8px !important;
+}
+
+.p-3 {
+  padding: 12px !important;
+}
+
+.p-4 {
+  padding: 16px !important;
+}
+
+.p-5 {
+  padding: 20px !important;
 }
 
 .mt-0 {
@@ -470,6 +514,31 @@ $screen-breakpoints: (
   padding-right: 0px !important;
 }
 
+.px-1 {
+  padding-left: 4px !important;
+  padding-right: 4px !important;
+}
+
+.px-2 {
+  padding-left: 8px !important;
+  padding-right: 8px !important;
+}
+
+.px-3 {
+  padding-left: 12px !important;
+  padding-right: 12px !important;
+}
+
+.px-4 {
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+}
+
+.px-5 {
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+}
+
 .py-0 {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
@@ -513,7 +582,15 @@ $screen-breakpoints: (
 }
 
 .font-bold {
-  font-weight: bold;
+  font-weight: bold !important;
+}
+
+.black {
+  background-color: black !important;
+
+  &--text {
+    color: black;
+  }
 }
 
 .truncate {
@@ -566,4 +643,41 @@ ion-button {
 
 .ion-label-with-ion-icon {
   display: inline-flex !important;
+}
+
+.food-card {
+  width: 168px;
+  background-color: #E9ECEF;
+  border-radius: 16px;
+  padding: 16px;
+  margin: 4px 4px;
+
+  & > .food-card-img {
+    height: 136px;
+    width: 136px;
+    align-content: center;
+  }
+
+  & > .food-card-container {
+    & > .food-card-title {
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 21px;
+    }
+
+    & > .food-card-subtitle {
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 18px;
+    }
+    
+    & > .food-card-details {
+      & > .food-card-details-price {
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        color: #D71921;
+      }
+    }
+  }
 }
