--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -573,6 +573,98 @@ $screen-breakpoints: (
   padding-top: 0px !important;
 }
 
+.pt-1 {
+  padding-top: 4px !important;
+}
+
+.pt-2 {
+  padding-top: 8px !important;
+}
+
+.pt-3 {
+  padding-top: 12px !important;
+}
+
+.pt-4 {
+  padding-top: 16px !important;
+}
+
+.pt-5 {
+  padding-top: 20px !important;
+}
+
+.pb-0 {
+  padding-bottom: 0px !important;
+}
+
+.pb-1 {
+  padding-bottom: 4px !important;
+}
+
+.pb-2 {
+  padding-bottom: 8px !important;
+}
+
+.pb-3 {
+  padding-bottom: 12px !important;
+}
+
+.pb-4 {
+  padding-bottom: 16px !important;
+}
+
+.pb-5 {
+  padding-bottom: 20px !important;
+}
+
+.pl-0 {
+  padding-left: 0px !important;
+}
+
+.pl-1 {
+  padding-left: 4px !important;
+}
+
+.pl-2 {
+  padding-left: 8px !important;
+}
+
+.pl-3 {
+  padding-left: 12px !important;
+}
+
+.pl-4 {
+  padding-left: 16px !important;
+}
+
+.pl-5 {
+  padding-left: 20px !important;
+}
+
+.pr-0 {
+  padding-right: 0px !important;
+}
+
+.pr-1 {
+  padding-right: 4px !important;
+}
+
+.pr-2 {
+  padding-right: 8px !important;
+}
+
+.pr-3 {
+  padding-right: 12px !important;
+}
+
+.pr-4 {
+  padding-right: 16px !important;
+}
+
+.pr-5 {
+  padding-right: 20px !important;
+}
+
 .text {
   color: #6C757D;
 }
@@ -599,6 +691,10 @@ $screen-breakpoints: (
   white-space: nowrap;
 }
 
+.text-center {
+  text-align: center !important;
+}
+
 hr.separator {
   background-color: #DEE2E6;
   margin-left: 8px;
@@ -617,20 +713,48 @@ ion-searchbar {
     border: 1px solid #6C757D;
   }
 
-  &>.input-wrapper {
+  & > .input-wrapper {
     padding: 0 16px !important;
 
-    &>.label-text-wrapper {
+    & > .label-text-wrapper {
       color: #6C757D !important;
     }
 
-    &>.input-highlight {
+    & > .input-highlight {
       display: none;
     }
   }
 
-  &>.searchbar-input-container {
+  & > .searchbar-input-container {
     --box-shadow: none;
+  }
+}
+
+ion-select.select-fill-solid {
+  margin: 8px 0;
+  border: 1px solid #DEE2E6;
+  border-radius: 16px;
+  transition: all .1s ease-in-out;
+  background-color: #F8F9FA;
+  --background: transparent;
+  --border-color: #DEE2E6;
+  --border-radius: 16px;
+  --border-width: 0px;
+  --box-shadow: none;
+  --highlight-height: 0px;
+
+  &.select-expanded {
+    border: 1px solid #6C757D;
+  }
+
+  &::part(icon) {
+    width: 22px;
+    padding-top: 6px;
+    color: #D71921;
+  }
+
+  &::part(label) {
+    color: #6C757D;
   }
 }
 
@@ -639,6 +763,20 @@ ion-button {
   text-transform: none;
   font-size: 14px;
   font-weight: 700;
+}
+
+ion-fab {
+  margin-bottom: var(--ion-safe-area-bottom, 0);
+
+  & > ion-fab-button {
+    --background: #d71921;
+    --background-activated: #b41119;
+    --background-hover: #d9353d;
+    --border-radius: 16px;
+    --color: white;
+    font-weight: 700;
+    width: 161px;
+  }
 }
 
 .ion-label-with-ion-icon {
@@ -670,14 +808,22 @@ ion-button {
       font-weight: 400;
       line-height: 18px;
     }
-    
-    & > .food-card-details {
-      & > .food-card-details-price {
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 24px;
-        color: #D71921;
-      }
-    }
   }
+}
+
+.food-card .food-card-details-price,
+.addons-container .addons-details-price {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #D71921;
+}
+
+.products-header-cart-icon {
+  height: 27px;
+  width: 27px;
+}
+
+.vue3-star-ratings__icon {
+  margin: 0px 1px !important;
 }
