--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,21 +26,21 @@ http://ionicframework.com/docs/theming/ */
 
 	--ion-color-tertiary: #FFC02E;
 	--ion-color-tertiary-rgb: 255,192,46;
-	--ion-color-tertiary-contrast: #000000;
+	--ion-color-tertiary-contrast: #ffffff;
 	--ion-color-tertiary-contrast-rgb: 0,0,0;
 	--ion-color-tertiary-shade: #e0a928;
 	--ion-color-tertiary-tint: #ffc643;
 
 	--ion-color-success: #2dd55b;
 	--ion-color-success-rgb: 45,213,91;
-	--ion-color-success-contrast: #000000;
+	--ion-color-success-contrast: #ffffff;
 	--ion-color-success-contrast-rgb: 0,0,0;
 	--ion-color-success-shade: #28bb50;
 	--ion-color-success-tint: #42d96b;
 
 	--ion-color-warning: #FD7E14;
 	--ion-color-warning-rgb: 253,126,20;
-	--ion-color-warning-contrast: #000000;
+	--ion-color-warning-contrast: #ffffff;
 	--ion-color-warning-contrast-rgb: 0,0,0;
 	--ion-color-warning-shade: #df6f12;
 	--ion-color-warning-tint: #fd8b2c;
